--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Almarai:wght@300&family=Titillium+Web:wght@200&display=swap');
+body{
+  font-family: 'Almarai', sans-serif;
+  font-family: 'Titillium Web', sans-serif;
+  background-color: #171717 !important;
+}
 .App {
   text-align: center;
 }
