--- a/src/components/TopNav/style.css
+++ b/src/components/TopNav/style.css
@@ -43,6 +43,7 @@
     grid-template-columns: 80% 20%;
     width: 83%;
     height: 50px;
+    align-items: center;
 }
 .input-search input{
     width: 100%;
